# ModuleWeatherStation

./: .gitignore  CMakeLists.txt
include/Sensor/: BarometerSensor.h  HumiditySensor.h  ISensor.h  Sensor.h  TemperatureSensor.h
include/Sensor/Window/: BarometerSensorWin.h  DoubleSlider.h  HumiditySensorWin.h  SensorWindow.h  TemperatureSensorWin.h
include/WeatherStation/: IWeatherStation.h  WeatherStation.h  WeatherStationWin.h
src/: CMakeLists.txt  main.cpp
src/Sensor/: BarometerSensor.cpp  HumiditySensor.cpp  Sensor.cpp  TemperatureSensor.cpp
src/Sensor/Window/: BarometerSensorWin.cpp  DoubleSlider.cpp  HumiditySensorWin.cpp  SensorWindow.cpp  TemperatureSensorWin.cpp
src/WeatherStation/: WeatherStation.cpp  WeatherStationWin.cpp
